2012-02-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Delete a specified status from composite
	timeline buffers.
	(twittering-get-dependent-timeline-specs): new function.
	(twittering-delete-status-from-data-table): delete the given
	status from buffers bound to composite timelines.

2012-01-29  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Follow the header conventions. Thanks to
	Jonas Bernoulli who reported the nonfulfillment.

	* twittering-mode.el: Expand a path before calling the function
	`alpaca-after-find-file'.
	(twittering-read-from-encrypted-file): expand FILE into a full
	path. Since "alpaca.el" uses the `buffer-file-name' as the prefix
	of the temporary file, it must be a full path.

	* twittering-mode.el: Add a new argument of the function
	`twittering-render-a-field' for rendering a tweet without a
	separator.
	(twittering-render-a-field): add a new argument for rendering a
	tweet without a separator.

	* twittering-mode.el: Render the header and footer line.
	(twittering-make-field-id-of-timeline-oldest-end): new function.
	(twittering-make-field-id-of-timeline-latest-end): new function.
	(twittering-field-id-is-timeline-oldest-end): new function.
	(twittering-field-id-is-timeline-latest-end): new function.
	(twittering-render-timeline): render the header and footer on
	rendering the whole of the buffer. In that case, the function now
	moves the cursor to the normal field not to the header nor
	footer.
	(twittering-mode-map): bind "G" to `twittering-goto-last-status'
	instead of `end-of-buffer'.
	(twittering-enter): update the timeline when the function is
	invoked on the header or footer.
	(twittering-goto-last-status): new function.
	(twittering-get-last-status-head): new function.
	(twittering-goto-first-normal-field): new function.
	(twittering-goto-last-normal-field): new function.
	(twittering-get-first-normal-field-head): new function.
	(twittering-get-last-normal-field-head): new function.