@@ -1423,6 +1423,33 @@ The alist consists of pairs of field-name and field-value, such as
 			   (cons (match-string 1 line) (match-string 2 line))))
 		       header-lines))))))
 
+(defun twittering-decode-response-body (header-info)
+  "Decode the current buffer according to the content-type in HEADER-INFO."
+  (let* ((content-type
+	  ;; According to RFC2616, field name of a HTTP header is
+	  ;; case-insensitive.
+	  (car
+	   (remove
+	    nil
+	    (mapcar (lambda (entry)
+		      (when (and (stringp (car entry))
+				 (let ((case-fold-search t))
+				   (string-match "\\`content-type\\'"
+						 (car entry))))
+			(cdr entry)))
+		    header-info))))
+	 (parameters (when (stringp content-type)
+		       (cdr (split-string content-type ";"))))
+	 (regexp "^[[:space:]]*charset=utf-8[[:space:]]*$")
+	 (encoded-with-utf-8
+	  (let ((case-fold-search t))
+	    (remove nil
+		    (mapcar (lambda (entry)
+			      (string-match regexp entry))
+			    parameters)))))
+    (when encoded-with-utf-8
+      (decode-coding-region (point-min) (point-max) 'utf-8))))
+
 (defun twittering-send-http-request-internal (request additional-info sentinel &optional order table)
   "Open a connection and return a subprocess object for the connection.
 REQUEST must be an alist that has the same keys as that generated by
@@ -1543,6 +1570,12 @@ The method to perform the request is determined from
 			 (when (search-forward-regexp "\r?\n\r?\n" nil t)
 			   ;; delete HTTP headers.
 			   (delete-region (point-min) (match-end 0)))
+			 ;; It may be necessary to decode the contents of
+			 ;; the buffer by UTF-8 because
+			 ;; `twittering-http-application-headers' specifies
+			 ;; utf-8 as one of acceptable charset.
+			 ;; For the present, only UTF-8 is taken into account.
+			 (twittering-decode-response-body header-info)
 			 (apply func proc status connection-info
 				header-info nil))))))
 	   ;; unwind-forms
@@ -2204,34 +2237,6 @@ the server when the HTTP status code equals to 400 or 403."
      status-code
      (("200")
       (debug-printf "connection-info=%s" connection-info)
-      ;; It may be necessary to decode the contents of the buffer by
-      ;; UTF-8 because `twittering-http-application-headers' specifies
-      ;; utf-8 as one of acceptable charset.
-      ;; For the present, only UTF-8 is taken into account.
-      (let* ((content-type
-	      ;; According to RFC2616, field name of a HTTP header is
-	      ;; case-insensitive.
-	      (car
-	       (remove
-		nil
-		(mapcar (lambda (entry)
-			  (when (and (stringp (car entry))
-				     (let ((case-fold-search t))
-				       (string-match "\\`content-type\\'"
-						     (car entry))))
-			    (cdr entry)))
-			header-info))))
-	     (parameters (when (stringp content-type)
-			   (cdr (split-string content-type ";"))))
-	     (regexp "^[[:space:]]*charset=utf-8[[:space:]]*$")
-	     (encoded-with-utf-8
-	      (let ((case-fold-search t))
-		(remove nil
-			(mapcar (lambda (entry)
-				  (string-match regexp entry))
-				parameters)))))
-	(when encoded-with-utf-8
-	  (decode-coding-region (point-min) (point-max) 'utf-8)))
       (let* ((spec (cdr (assq 'timeline-spec connection-info)))
 	     (spec-string (cdr (assq 'timeline-spec-string connection-info)))
 	     (format (cdr (assq 'format connection-info)))
